# statbot

./: .gitignore  .pylintrc  README.md  pyproject.toml  settings.json.example
db-migrations/: 001.sql
sb/: __init__.py  __main__.py
