[tool.poetry]
name = "sb"
version = "0.3.1"
description = "Eye see you"
authors = ["Cassidy Dingenskirchen <admin@15318.de>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "~1.5"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
isort = "^5.6.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
statbot = "sb.__main__:main"
